# latent_diffusion_policy

./: .flake8  .gitignore  README.md  pyproject.toml
config/: config.yaml
config/task/: adroit_hammer.yaml
latent_diffusion_policy/: __init__.py
latent_diffusion_policy/model/: __init__.py  ldf.py
latent_diffusion_policy/utils/: __init__.py  preprocess.py  train_experts.py  wrapper.py
scripts/: demo_train.py
tests/: test_image_proprocess.py  test_multistep_wrapper.py  test_pick_and_place.py
