[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent_diffusion_policy"
version = "0.1.0"
description = "A project for latent diffusion policy research"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "torch",
    "scipy",
    "torchvision",
    "pytorch3d",
    "opencv-python",
    "cffi",
    "ipykernel",
    "matplotlib",
    "zarr",
    "numcodecs",
    "h5py",
    "hydra-core",
    "einops",
    "tqdm",
    "dill",
    "scikit-video",
    "scikit-image",
    "gym",
    "pymunk",
    "wandb",
    "threadpoolctl",
    "shapely",
    "cython",
    "imageio",
    "imageio-ffmpeg",
    "termcolor",
    "tensorboard",
    "tensorboardx",
    "psutil",
    "click",
    "boto3",
    "accelerate",
    "datasets",
    "diffusers",
    "av",
    "cmake",
    "imagecodecs",
    "ray[default,tune]",
    "free-mujoco-py",
    "pygame",
    "pybullet-svl",
    "robomimic",
    "pytorchvideo",
    "r3m @ https://github.com/facebookresearch/r3m.git",
    "dm-control",
]