[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent_diffusion_policy"
version = "0.1.0"
description = "A project for latent diffusion policy research"
authors = [
    { name = "Feiyang Wu", email = "feiyangwu@gatech.edu" },
    { name = "Huishu Xue", email = "hxue37@gatech.edu" },
    { name = "Yifan Wu", email = "ywu3057@gatech.edu" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy",
    "torch",
    "scipy",
    "torchvision",
    "cffi",
    "zarr",
    "numcodecs",
    "h5py",
    "hydra-core",
    "einops",
    "tqdm",
    "pymunk",
    "wandb",
    "imageio",
    "tensorboard",
    "diffusers",
    "gymnasium",
    "gymnasium_robotics",
    "pytest",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["latent_diffusion_policy"]
